--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  //z-index: 999;
 }
 
 .modal {
@@ -16,8 +15,35 @@
   height: 700px;
   border-radius: 8px;
   background-color: white;
-  //z-index: 1000;
   overflow: hidden;
+
+  &.small {
+    width: 300px;
+    height: 400px;
+
+    .header {
+      height: 12%;
+
+      h1 {
+        font-size: 22px;
+      }
+
+      .closeBtn {
+        font-size: 22px;
+      }
+    }
+
+    .body {
+      height: 76%;
+
+    }
+
+    .footer {
+      height: 12%;
+
+    }
+
+  }
 
   .header {
     display: flex;
@@ -41,8 +67,8 @@
   }
 
   .body {
-    flex: 1;
     height: 82%;
+    padding: 15px;
   }
 
   .footer {
